# messenger-kafka-k8s

./: .env.example  README.md  docker-compose.yml
docs/: scheduling-decisions.md
frontend/: .dockerignore  .env  .env.prod  Dockerfile  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vitest.config.ts  vitest.setup.ts  vitest.smoke.test.tsx
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: home-client.tsx
frontend/components/auth/: auth-screen.tsx  auth.module.css  sign-in-form.test.tsx  sign-in-form.tsx  sign-up-form.test.tsx  sign-up-form.tsx
frontend/components/chats/: chat-list.test.tsx  chat-list.tsx  chat-page.integration.test.tsx  chat-page.tsx  chat-panel.tsx  chats.module.css  create-chat-dialog.tsx  create-chat-form.test.tsx  create-chat-form.tsx  message-bubble.test.tsx  message-bubble.tsx
frontend/components/providers/: auth-provider.tsx  message-delivery-provider.tsx
frontend/components/ui/: button.tsx  dialog.tsx
frontend/lib/: api.test.ts  api.ts  auth-storage.test.ts  auth-storage.ts  avatar.test.ts  avatar.ts  chats.test.ts  chats.ts  format.test.ts  format.ts  jwt.test.ts  jwt.ts  message-delivery.test.ts  message-delivery.ts  messages.test.ts  messages.ts  mock-data.ts
frontend/test/mocks/: api-handlers.ts  handlers.ts  websocket.ts
frontend/test/utils/: fixtures.ts  render.tsx
infra/: .dockerignore  .gitignore  Dockerfile  README.md  cdk.context.example.json  cdk.json  package-lock.json  package.json
infra/lib/: load-test-stack.ts  messenger-config.ts  messenger-stack.ts
infra/load-test/: simulate-user.mjs
k18n/: chat-service.yaml  kafka.yaml  message-delivery-service.yaml  message-service.yaml  message-storage-service-mongo.yaml  message-storage-service.yaml  mongo-express.yaml  public-api-service.yaml  users-service.yaml
k8s/: frontend-service.yaml  ingress.yaml  kafka-ui.yaml  message-delivery-service.yaml  mongo-express.yaml  public-api-service.yaml
k8s/base/: chat-service.yaml  frontend-service.yaml  ingress.yaml  kafka-ui.yaml  kafka.yaml  kustomization.yaml  message-delivery-service.yaml  message-storage-service-mongo.yaml  message-storage-service.yaml  mongo-express.yaml  public-api-service.yaml  users-service.yaml
k8s/base/observability/: grafana-datasources.yaml  grafana-ingress.yaml  grafana-secret.yaml  grafana.yaml  kustomization.yaml  mimir-config.yaml  mimir.yaml  otel-collector-config.yaml  otel-collector-daemonset.yaml  otel-collector-rbac.yaml  tempo-config.yaml  tempo.yaml
k8s/overlays/local/: grafana-ingress-patch.yaml  ingress-patch.yaml  kustomization.yaml
k8s/overlays/prod/: chat-az-spread-patch.yaml  chat-otel-patch.yaml  frontend-az-spread-patch.yaml  grafana-ingress-patch.yaml  hosts-configmap.yaml  ingress-patch.yaml  kustomization.yaml  message-delivery-az-spread-patch.yaml  message-delivery-otel-patch.yaml  (+10 more)
scripts/: build-chat.sh  build-frontend.sh  build-images.sh  build-message-delivery.sh  build-message-storage.sh  build-public-api.sh  build-users.sh  configure-prod-ecr.sh  create-kafka-topics.sh  install-cluster-addons.sh  pods-by-node.sh  port-forward-public-api.sh  prepare-prod-deploy.sh  push-ecr.sh  setup-local-cluster.sh  test-public-api-load-balancing.sh
scripts/load-test/: invoke-simulate-users.sh  seed-users.sh
services/: Dockerfile.dev
services/chat/: Cargo.toml  Dockerfile
services/message-delivery/: Cargo.toml  Dockerfile
services/message-push/: Cargo.toml  Dockerfile
services/message-storage/: Cargo.toml  Dockerfile
services/message-storage/src/: main.rs  telemetry.rs  topics.rs
services/message-storage/src/kafka/: message_sent.rs  mod.rs
services/message-storage/src/messages/: list.rs  mod.rs
services/public-api/: Cargo.toml  Dockerfile
services/public-api/src/: main.rs  telemetry.rs
services/users/: Cargo.toml  Dockerfile
services/users/src/: main.rs  telemetry.rs
services/users/src/authentications/: create.rs  mod.rs
services/users/src/users/: create.rs  get.rs  mod.rs
(+10 files in other folders)
