[package]
name = "public-api"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal"] }
axum = { version = "0.8", features = ["json"] }
rdkafka = { version = "0.37", features = ["tokio", "cmake-build"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json"] }
jsonwebtoken = "9"
tower-http = { version = "0.6", features = ["cors"] }
