[package]
name = "users"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal"] }
axum = { version = "0.8", features = ["json"] }
mongodb = { version = "3.2", features = ["opentelemetry"] }
tower-http = { version = "0.6", features = ["trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-opentelemetry = "0.33"
opentelemetry = { version = "0.32", features = ["trace"] }
opentelemetry_sdk = { version = "0.32", features = ["rt-tokio", "trace"] }
opentelemetry-otlp = { version = "0.32", features = ["grpc-tonic", "trace"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
argon2 = "0.5"
jsonwebtoken = "9"
chrono = { version = "0.4", features = ["clock"] }
rand_core = { version = "0.6", features = ["getrandom"] }
